GG - the activities endpoint now has feature parity with the RIDB version in terms of behaviors of limit and offset. We also made an additive enhancement to allow for calling for the full list and handle the paging for the consumer as a convenience feature (likely a handy debugging feature).
